# AIAgent

./: .env.deepseek  .env.example  .env.mock  .env.moonshot  AGENTS.md  README.md  pyproject.toml
docs/: agent-guide.md
docs/gsd/: project-sop.md
docs/specs/: 2026-03-26-api-integration-feasibility-analysis.md  2026-03-26-api-integration-feasibility-spec.md  2026-03-26-extensible-provider-framework-analysis.md  2026-03-26-extensible-provider-framework-spec.md  2026-03-26-provider-registry-config-selection-spec.md  2026-03-27-deepseek-provider-spec.md
docs/superpowers/plans/: 2026-03-25-aiagent-bootstrap.md  2026-03-26-extensible-provider-framework-analysis.md  2026-03-26-provider-registry-config-selection.md  2026-03-27-deepseek-provider.md  2026-03-27-env-launcher.md  2026-03-27-streaming-output.md
docs/superpowers/specs/: 2026-03-25-aiagent-bootstrap-design.md  2026-03-27-env-launcher-design.md  2026-03-27-streaming-output-design.md
src/aiagent/: __main__.py
src/aiagent/agents/: __init__.py  assistant.py  base.py  coordinator.py  router.py  subagent.py
src/aiagent/cli/: main.py  repl.py  (+1 more)
tests/agents/: test_assistant.py  test_coordinator.py  test_router.py
tests/cli/: test_main.py  test_streaming.py
tests/config/: test_provider_config.py  test_settings.py
tests/domain/: test_models.py
tests/prompts/: test_templates.py
tests/providers/: test_deepseek.py  test_factory.py  test_mock.py  test_moonshot.py  test_registry.py
tests/selection/: test_static.py
tests/session/: test_history.py
tests/tools/: test_run_with_env.py
tools/: run_with_env.py
(+21 files in other folders)
