[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27,<1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
